@@ -20,7 +20,8 @@ Revision history for Perl module Net::WebSocket
 - BREAKING: Parse’s parameter must now implement IO::Framed::Read.
 
 - BREAKING: Because we now farm the I/O out to IO::Framed
-  (or whatever replacement), some of the thrown exceptions are changed:
+  (or whatever replacement class you may prefer), some of the thrown
+  exceptions are changed:
 
     Net::WebSocket::X::ReadFilehandle is gone. If you use IO::Framed,
     you’ll now receive IO::Framed::X::ReadError
@@ -29,6 +30,9 @@ Revision history for Perl module Net::WebSocket
     you’ll now receive IO::Framed::X::EmptyRead.
 
 - BREAKING: I’ve removed the before_send_control_frame() handler.
+
+- Net::WebSocket::Parser now instantiates the “target” frame class object,
+  not the base Net::WebSocket::Frame class.
 
 - Removed the Bytes::Random::Secure::Tiny dependency. It doesn’t seem we
   really need cryptographically strong random numbers for masking or
